tests/fixtures/errors/generic_dup_type_arg.z
# E0400: the same type argument supplied twice (elided first arg + explicit).
main: function is {
    x: (List i64 of: f64)
}
